k8s/03.ingress-pub.yml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${CI_PROJECT_NAME}-ingress-pub
  namespace: services 
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/auth-response-headers: x-auth-request-user, x-auth-request-email
    # nginx.ingress.kubernetes.io/auth-signin: >-
    #   https://oauth2-it.ext.grancall.ru/oauth2/start?rd=https://$NGINX_AUTH_REDIRECT
    # nginx.ingress.kubernetes.io/auth-url: https://oauth2-it.ext.grancall.ru/oauth2/auth
    # nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    # nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16,178.2.0.3/18,178.1.0.2/17
spec:
  tls:
    - hosts:
        - itsource.kg
        - itresource.kg
      secretName: itsource.kg-crt
  rules:
  - host: itresource.kg
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ${CI_PROJECT_NAME}
            port:
              number: 80
  - host: itsource.kg
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ${CI_PROJECT_NAME}
            port:
              number: 80              
  ingressClassName: pub.nginx
