k8s/04.ingress-pub1.yml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${CI_PROJECT_NAME}-ingress-pub1
  namespace: services 
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/auth-response-headers: x-auth-request-user, x-auth-request-email
    # nginx.ingress.kubernetes.io/auth-signin: >-
    #   https://oauth2-it.ext.grancall.ru/oauth2/start?rd=https://$NGINX_AUTH_REDIRECT
    # nginx.ingress.kubernetes.io/auth-url: https://oauth2-it.ext.grancall.ru/oauth2/auth
    # nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    # nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16,178.2.0.3/18,178.1.0.2/17
    nginx.ingress.kubernetes.io/permanent-redirect: https://itsource.kg
spec:
  tls:
    - hosts:
        - itsrc.kg
      secretName: itsrc.kg-crt
  rules:
  - host: itsrc.kg
     
  ingressClassName: pub.nginx
